<resources>
    <string name="app_name">DogBreedDirectory</string>
    <string name="settings">Settings</string>
    <string name="favourites">Favourites</string>
    <string name="sort_dogs">Sort dogs:</string>
    <string name="a_z"><![CDATA[A -> Z]]></string>
    <string name="z_a"><![CDATA[Z -> A]]></string>
    <string name="smallest_to_largest">Smallest to Largest</string>
    <string name="largest_to_smallest">Largest to Smallest</string>
    <string name="breed_name">Breed name</string>
    <string name="bred_for">Bred for</string>
    <string name="life_span">Life span</string>
    <string name="temperament">Temperament</string>
    <string name="origin">Origin</string>
    <string name="bredForText">Dog is bred for: %s</string>
    <string name="lifeSpanText">Dog has a lifespan of: %s</string>
    <string name="temperamentText">Dogs temperament is: %s</string>
    <string name="originText">Origin of this dog is: %s</string>
    <string name="no_dogs_are_favorites_go_choose_your_favorite_pups">No dogs are favorites. Go choose your favorite pups!</string>
    <string name="dog_of_the_day">Dog of the day</string>
    <string name="today_s_dog_of_the_day_is">Today\'s Dog of the day is:</string>
</resources>